finished game (w/out betting)!